# beamer

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
crates/beamer/: Cargo.toml
crates/beamer-au/: Cargo.toml  README.md  build.rs
crates/beamer-au/objc/: BeamerAuBridge.h  BeamerAuExtension.m  BeamerAuWrapper.m  appex_main.m  stub_main.c
crates/beamer-au/src/: bridge.rs  buffer_storage.rs  buffers.rs  config.rs  error_helpers.rs  export.rs  factory.rs  instance.rs  lib.rs  lifecycle.rs  midi.rs  objc_block.rs  processor.rs  render.rs  transport.rs
crates/beamer-core/: Cargo.toml  README.md
crates/beamer-core/src/: assets.rs  buffer_storage.rs  bus_config.rs  bypass.rs  config.rs  conversion_buffers.rs  editor.rs  error.rs  gui.rs  lib.rs  midi.rs  midi_cc_config.rs  midi_cc_state.rs  parameter_format.rs  parameter_info.rs  parameter_store.rs  parameter_types.rs  plugin.rs  preset.rs  process_context.rs  setup.rs  smoothing.rs  sysex_pool.rs  webview_handle.rs  webview_handler.rs
crates/beamer-macros/: Cargo.toml  README.md
crates/beamer-macros/src/: codegen.rs  config_file.rs  has_parameters.rs  init.rs  ir.rs  lib.rs  parse.rs  presets.rs  validate.rs
crates/beamer-utils/: Cargo.toml  README.md
crates/beamer-vst3/: Cargo.toml  README.md
crates/beamer-vst3/src/: export.rs  factory.rs  lib.rs  processor.rs  util.rs  webview.rs  wrapper.rs
crates/beamer-webview/: Cargo.toml  README.md
crates/beamer-webview/src/: assets.rs  error.rs  ffi.rs  lib.rs  mime.rs  view.rs
crates/beamer-webview/src/platform/: beamer_runtime.js  macos.rs  macos_ipc.rs  macos_scheme.rs  mod.rs  windows.rs
crates/beamer/src/: lib.rs
docs/: AU_BUNDLE_IDENTIFIERS.md  AU_CODE_SIGNING.md  AU_DEBUG_INFO.md  AU_DEBUG_TODO.md  AU_INSTRUMENT_MIDI_INVESTIGATION.md  AU_LOGIC_COMPATIBILITY_INVESTIGATION.md  BUFFER_STORAGE_OPTIMIZATION.md  CLAP_SUPPORT_ANALYSIS.md  DESIGN_COMBINED_PLUGIN_MACRO.md  EXAMPLE_COVERAGE.md  HEADLESS-AUv3-GUIDE.md  REFERENCE.md  ROADMAP_MULTI_FORMAT.md  TODO-AUV3-DISCOVERY.md  WEBVIEW_PHASE2A.md  WEBVIEW_PHASE2B.md  WEBVIEW_PHASE2C.md  WEBVIEW_ROADMAP.md
examples/: README.md
examples/compressor/: Cargo.toml  Config.toml
examples/compressor/src/: lib.rs
examples/delay/: Cargo.toml  Config.toml  Presets.toml
examples/delay/src/: lib.rs
examples/drums/: Cargo.toml  Config.toml
examples/drums/src/: lib.rs
examples/equalizer/: Cargo.toml  Config.toml
examples/equalizer/src/: lib.rs
examples/gain/: Cargo.toml  Config.toml
examples/gain/src/: lib.rs
examples/midi-transform/: Cargo.toml  Config.toml
examples/midi-transform/src/: lib.rs
examples/simple-gain/: Cargo.toml  build.rs
examples/simple-gain/src/: lib.rs
examples/synth/: Cargo.toml
examples/synth/src/: lib.rs
examples/synthesizer/: Cargo.toml  Config.toml
examples/synthesizer/src/: lib.rs
examples/webview-demo/: Cargo.toml  Config.toml
examples/webview-demo-auv2/: Cargo.toml  Config.toml
examples/webview-demo-auv2/src/: lib.rs
examples/webview-demo-auv2/webview/: index.html  package.json  tsconfig.json
examples/webview-demo-auv2/webview/src/: App.tsx  beamer.d.ts
examples/webview-demo-auv2/webview/src/components/: Slider.tsx
examples/webview-demo-auv2/webview/src/hooks/: useBeamerControl.ts
examples/webview-demo/src/: lib.rs
examples/webview-demo/webview/: index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json
examples/webview-demo/webview/src/: App.tsx
examples/webview-demo/webview/src/components/: Slider.tsx
examples/webview-demo/webview/src/hooks/: useBeamerControl.ts  useBeamerParam.ts
examples/webview-demo/webview/src/types/: beamer.d.ts
xtask/: Cargo.toml
xtask/src/: auv2.rs  auv3.rs  build.rs  main.rs  util.rs  vst3.rs
xtask/src/au_codegen/: au_ipc_helpers.h  auv2_c.rs  auv2_wrapper.c  auv3_extension.m  auv3_extension_editor.m  auv3_extension_gui.m  auv3_objc.rs  auv3_wrapper.m
xtask/src/au_templates/: auv2_c.rs  auv3_objc.rs
