[workspace]
members = [
    "crates/beamer",
    "crates/beamer-core",
    "crates/beamer-macros",
    "crates/beamer-utils",
    "crates/beamer-au",
    "crates/beamer-vst3",
    "examples/gain",
    "examples/compressor",
    "examples/equalizer",
    "examples/delay",
    "examples/synthesizer",
    "examples/midi-transform",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/helpermedia/beamer"

[workspace.dependencies]
vst3 = "0.3"
log = "0.4"

# Proc-macro dependencies
syn = { version = "2", features = ["full", "parsing", "printing", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

# Internal crates
beamer = { version = "0.2.1", path = "crates/beamer" }
beamer-core = { version = "0.2.1", path = "crates/beamer-core" }
beamer-macros = { version = "0.2.1", path = "crates/beamer-macros" }
beamer-utils = { version = "0.2.1", path = "crates/beamer-utils" }
beamer-au = { version = "0.2.1", path = "crates/beamer-au" }
beamer-vst3 = { version = "0.2.1", path = "crates/beamer-vst3" }

[workspace.lints.clippy]
undocumented_unsafe_blocks = "warn"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[profile.release]
lto = true
codegen-units = 1
strip = true
