[package]
name = "beamer-au"
version.workspace = true
edition.workspace = true
description = "Audio Unit support for Beamer audio plugin framework (hybrid v2/v3 architecture)"
license.workspace = true
repository = "https://github.com/helpermedia/beamer"
keywords = ["audio", "plugin", "au", "audiounit", "music"]
categories = ["multimedia::audio"]
# This tells cargo to propagate native library dependencies to downstream crates
links = "beamer_au_native"

[features]
default = []
sysex-heap-fallback = []

[build-dependencies]
cc = "1.0"

[dependencies]
beamer-core = { path = "../beamer-core" }
log = { workspace = true }

# Note: The hybrid ObjC/Rust AU architecture uses native Objective-C (BeamerAuWrapper.m)
# for AUAudioUnit subclassing, with a C-ABI bridge to Rust. This avoids the need for
# objc2/block2 crates which had issues with AUAudioUnit subclassing.
