[package]
name = "beamer-webview"
description = "WebView GUI support for Beamer audio plugins"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
beamer-core = { workspace = true }
log = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSData",
    "NSDictionary",
    "NSGeometry",
    "NSString",
    "NSURL",
    "NSURLRequest",
    "NSURLResponse",
] }
objc2-app-kit = { version = "0.3", features = ["NSView"] }
objc2-web-kit = { version = "0.3", features = [
    "WKWebView",
    "WKWebViewConfiguration",
    "WKNavigation",
    "WKURLSchemeHandler",
    "WKURLSchemeTask",
    "objc2-app-kit",
    "objc2-core-foundation",
] }

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
] }

[lints]
workspace = true
