[package]
name = "beamer"
description = "VST3 framework for Rust - convenience re-exports"
readme = "../../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["derive"]
derive = ["beamer-macros"]

# Plugin format features - controlled by bundler via --features flag
vst3 = ["dep:beamer-vst3", "dep:vst3"]
au = ["dep:beamer-au"]

[dependencies]
beamer-core = { workspace = true }
beamer-vst3 = { workspace = true, optional = true }
vst3 = { workspace = true, optional = true }
beamer-au = { workspace = true, optional = true }
beamer-macros = { workspace = true, optional = true }
