[package]
name = "beamer"
description = "Audio plugin (AU, VST3) framework for Rust"
readme = "../../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["derive"]
derive = ["beamer-macros"]

# Plugin format features - controlled by bundler via --features flag
au = ["dep:beamer-au"]
vst3 = ["dep:beamer-vst3", "dep:vst3"]

[dependencies]
beamer-core = { workspace = true }
beamer-macros = { workspace = true, optional = true }
beamer-au = { workspace = true, optional = true }
beamer-vst3 = { workspace = true, optional = true }
vst3 = { workspace = true, optional = true }
