[package]
name = "equalizer"
description = "Example equalizer plugin using the Beamer framework"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
vst3 = ["beamer/vst3"]
au = ["beamer/au"]

[dependencies]
beamer = { workspace = true }
