[package]
name = "gain"
description = "Example gain plugin using the Beamer framework"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
# Plugin format features - controlled by bundler via --features flag
vst3 = ["beamer/vst3", "dep:vst3"]
au = ["beamer/au"]

[dependencies]
beamer = { workspace = true }
vst3 = { workspace = true, optional = true }
