[package]
name = "midi-transform"
description = "Example MIDI note transformer plugin using the Beamer framework"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
au = ["beamer/au"]
vst3 = ["beamer/vst3"]

[dependencies]
beamer = { workspace = true }
