[package]
name = "simple-gain"
description = "Example simple-gain plugin (without side chaining) using the Beamer framework"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
beamer = { workspace = true }
beamer-au = { workspace = true }
vst3 = { workspace = true }
