[package]
name = "webview-demo"
description = "Example plugin with WebView GUI using the Beamer framework"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
au = ["beamer/au"]
vst3 = ["beamer/vst3"]

[lints]
workspace = true

[dependencies]
beamer = { workspace = true }
